conformance/tests/gateway-with-clientcertificate-validation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: client-validation-default
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
          - kind: ConfigMap
            group: ""
            name: tls-validity-checks-ca-certificate
      perPort:
      - port: 8443
        tls:
          validation:
            caCertificateRefs:
            - kind: ConfigMap
              group: ""
              name: tls-validity-checks-per-port-ca-certificate
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
        namespace: gateway-conformance-infra
  - name: https-with-hostname
    port: 8443
    hostname: second-example.org
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
        namespace: gateway-conformance-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-certificate-validation-https-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: client-validation-default
  hostnames:
  - example.org
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-certificate-validation-https-test-no-hostname
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: client-validation-default
    sectionName: https-with-hostname
  rules:
  - backendRefs:
    - name: infra-backend-v2
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-certificate-validation-https-test-no-hostname
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: client-validation-default
    sectionName: https-with-hostname
  rules:
  - backendRefs:
    - name: infra-backend-v2
      port: 8080
